--- a/src/components/CreateTrick/createTrick.css
+++ b/src/components/CreateTrick/createTrick.css
@@ -3,7 +3,7 @@ display: flex;
 justify-content: center;
 margin: 20px;
 border-radius: 20px;
-gap: 10px
+gap: 10px;
 }
 
 .create-trick input,
@@ -13,6 +13,7 @@ gap: 10px
   border: 1px solid #ccc;
   border-radius: 10px; 
   font-size: 16px;
+  font-family: 'Fredoka One', cursive;
 }
 
 .create-trick button {
@@ -23,6 +24,7 @@ gap: 10px
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
+  font-family: 'Fredoka One', cursive;
 }
 
 
